--- a/s1_development_environment/exercise_files/1_Tensors_in_PyTorch.ipynb
+++ b/s1_development_environment/exercise_files/1_Tensors_in_PyTorch.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,11 +119,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.1595]])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "## Calculate the output of this network using the weights and bias tensors.\n"
+    "## Calculate the output of this network using the weights and bias tensors.\n",
+    "# Calculate the output of this network using the weights and bias tensors.\n",
+    "output = activation(torch.sum(features * weights) + bias)\n",
+    "output"
    ]
   },
   {
@@ -164,11 +178,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.1595]])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "## Calculate the output of this network using matrix multiplication\n"
+    "## Calculate the output of this network using matrix multiplication\n",
+    "output = activation(torch.mm(features, weights.t()) + bias)\n",
+    "output"
    ]
   },
   {
@@ -206,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +244,9 @@
     "features = torch.randn((1, 3))\n",
     "\n",
     "# Define the size of each layer in our network.\n",
-    "n_input = features.shape[1]  # Number of input units, must match number of input features.\n",
+    "n_input = features.shape[\n",
+    "    1\n",
+    "]  # Number of input units, must match number of input features.\n",
     "n_hidden = 2  # Number of hidden units.\n",
     "n_output = 1  # Number of output units.\n",
     "\n",
@@ -240,11 +269,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.3171]])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "## Your solution here.\n"
+    "## Your solution here.\n",
+    "# Calculate the output for this multi-layer network using the weights W1 & W2, and the biases, B1 & B2.\n",
+    "hidden_output = activation(torch.mm(features, W1) + B1)\n",
+    "final_output = activation(torch.mm(hidden_output, W2) + B2)\n",
+    "final_output"
    ]
   },
   {
@@ -267,19 +311,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.61995741, 0.33155467, 0.8174536 ],\n",
-       "       [0.34563545, 0.15472967, 0.23112194],\n",
-       "       [0.57911665, 0.7242849 , 0.41691137],\n",
-       "       [0.68045155, 0.49653628, 0.32549209]])"
+       "array([[0.89677961, 0.98855259, 0.93124798],\n",
+       "       [0.77971624, 0.19620113, 0.9699356 ],\n",
+       "       [0.09838143, 0.09117735, 0.00361375],\n",
+       "       [0.72972564, 0.93308841, 0.67353034]])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,19 +338,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[0.61995741, 0.33155467, 0.81745360],\n",
-       "        [0.34563545, 0.15472967, 0.23112194],\n",
-       "        [0.57911665, 0.72428490, 0.41691137],\n",
-       "        [0.68045155, 0.49653628, 0.32549209]], dtype=torch.float64)"
+       "tensor([[0.89677961, 0.98855259, 0.93124798],\n",
+       "        [0.77971624, 0.19620113, 0.96993560],\n",
+       "        [0.09838143, 0.09117735, 0.00361375],\n",
+       "        [0.72972564, 0.93308841, 0.67353034]], dtype=torch.float64)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -319,19 +363,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.61995741, 0.33155467, 0.8174536 ],\n",
-       "       [0.34563545, 0.15472967, 0.23112194],\n",
-       "       [0.57911665, 0.7242849 , 0.41691137],\n",
-       "       [0.68045155, 0.49653628, 0.32549209]])"
+       "array([[0.89677961, 0.98855259, 0.93124798],\n",
+       "       [0.77971624, 0.19620113, 0.9699356 ],\n",
+       "       [0.09838143, 0.09117735, 0.00361375],\n",
+       "       [0.72972564, 0.93308841, 0.67353034]])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -349,19 +393,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[1.23991482, 0.66310935, 1.63490719],\n",
-       "        [0.69127089, 0.30945934, 0.46224388],\n",
-       "        [1.15823331, 1.44856981, 0.83382274],\n",
-       "        [1.36090309, 0.99307255, 0.65098418]], dtype=torch.float64)"
+       "tensor([[1.79355922, 1.97710519, 1.86249596],\n",
+       "        [1.55943248, 0.39240227, 1.93987120],\n",
+       "        [0.19676285, 0.18235470, 0.00722749],\n",
+       "        [1.45945127, 1.86617682, 1.34706069]], dtype=torch.float64)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,19 +417,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[1.23991482, 0.66310935, 1.63490719],\n",
-       "       [0.69127089, 0.30945934, 0.46224388],\n",
-       "       [1.15823331, 1.44856981, 0.83382274],\n",
-       "       [1.36090309, 0.99307255, 0.65098418]])"
+       "array([[1.79355922, 1.97710519, 1.86249596],\n",
+       "       [1.55943248, 0.39240227, 1.9398712 ],\n",
+       "       [0.19676285, 0.1823547 , 0.00722749],\n",
+       "       [1.45945127, 1.86617682, 1.34706069]])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -398,7 +442,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mlops",
+   "display_name": "dtumlops",
    "language": "python",
    "name": "python3"
   },
@@ -412,7 +456,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
